--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
                 <h2><a href="#">DMC Delorean</a></h2>
                 <p>3 Cup holders<br>Superman doors<br>Fuzzy dice!</p>
                 <div class="btn-container">
-                    <button>Own Today</button>
+                    <a href="#" class="btn">Own Today</a>
                 </div>
             </div>
             <div class="car-image">
